# jitfields

./: .gitattributes  .gitignore  MANIFEST.in  OTHER_LICENSES  README.md  pyproject.toml  setup.cfg  setup.py
.conda/: meta.yaml
.github/workflows/: test-and-publish.yaml
demo/: benchmark.ipynb  interpol.ipynb  pushpull.ipynb  pushpull.py  solveg.py  sym.py
docs/: mkdocs.yml  requirements.txt
docs/md/: index.md  install.md  start.md
jitfields/: __init__.py  _regularisers_fields.py  _regularisers_flows.py  _version.py  _wip_regularisers.py  distance.py  pushpull.py  pushpull_backward.py  regularisers.py  regularization.py  resize.py  solvers.py  splinc.py  sym.py  typing.py  utils.py
jitfields/common/: utils.py
jitfields/cpp/: distance.py  init.py  pushpull.py  regularization.py  resize.py  restrict.py  splinc.py  sym.py  threads.py  utils.py
jitfields/csrc/: atomic.h  batch.h  bounds.h  cuda_switch.h  distance_euclidean.cu  distance_euclidean.h  distance_euclidean.hpp  distance_l1.cu  distance_l1.h  distance_l1.hpp  hessian.h  parallel.h  parallel_impl.h  pushpull.cu  pushpull.h  pushpull.hpp  pushpull_1d.cuh  pushpull_1d.h  pushpull_1d.hpp  pushpull_2d.cuh  pushpull_2d.h  pushpull_2d.hpp  pushpull_3d.cuh  pushpull_3d.h  pushpull_3d.hpp  pushpull_utils.h  reg_field.h  reg_field_1d.h  resize.cu  resize.h  resize.hpp  restrict.cu  restrict.h  restrict.hpp  splinc.cu  splinc.h  splinc.hpp  spline.h  threadpool.inl  utils.h
jitfields/cuda/: atomic.cuh  atomic.py  batch.cuh  batch.py  bounds.cuh  bounds.py  distance.py  distance_euclidean.cu  distance_l1.cu  interpolation.cuh  interpolation.py  pushpull.py  resize.cu  resize.py  restrict.cu  restrict.py  splinc.cu  splinc.cuh  splinc.py  spline.cuh  spline.py  utils.py
jitfields/numba/: distance.py  utils.py
jitfields/tests/: _test_meshdist.py  _test_meshdist_2d.py  _test_meshdist_3d.py  _test_meshdist_grad_2d.py  _test_splinedist.py  phantoms.py  ref_kernels.py  (+10 more)
(+162 files in other folders)
