[metadata]
name = jitfields
author = Yael Balbastre
author_email = yael.balbastre@gmail.com
description = Fast utilities for dense scalar and vector fields
long_description = file:README.md
platforms = OS Independent
license = MIT
license_file = LICENSE
classifiers =
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent
    Programming Language :: Python :: 3
    Intended Audience :: Science/Research
    Topic :: Scientific/Engineering :: Artificial Intelligence
    Topic :: Scientific/Engineering :: Medical Science Apps.
project_urls =
    Source Code=https://github.com/balbasty/jitfields

[options]
python_requires = >= 3.6
install_requires =
    numpy
    numba >= 0.39
    cupy
    torch >= 1.8
