[metadata]
name = jitfields
author = Yael Balbastre
author_email = yael.balbastre@gmail.com
description = Fast utilities for dense scalar and vector fields
long_description = file:README.md
long_description_content_type = text/markdown
platforms = OS Independent
license = MIT
license_files = LICENSE
classifiers =
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent
    Programming Language :: Python :: 3
    Intended Audience :: Science/Research
    Topic :: Scientific/Engineering :: Artificial Intelligence
    Topic :: Scientific/Engineering :: Medical Science Apps.
project_urls =
    Source Code=https://github.com/balbasty/jitfields

[options]
packages = find:
python_requires = >= 3.6
install_requires =
    numpy
    cppyy
    torch >= 1.8

[options.package_data]
* =
    csrc/*
    csrc/*/*
    csrc/*/*/*
    csrc/*/*/*/*
    csrc/*/*/*/*/*

[options.extras_require]
cuda =
    cupy
test =
    pytest

[versioneer]
VCS = git
style = pep440
versionfile_source = jitfields/_version.py
versionfile_build = jitfields/_version.py
tag_prefix =
parentdir_prefix =